--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "hexo": "^3.2.0",
-    "hexo-deployer-git": "^0.3.0",
+    "hexo-deployer-git": "0.3.0",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-baidu-sitemap": "^0.1.2",
     "hexo-generator-category": "^0.1.3",
@@ -20,6 +20,6 @@
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0",
     "hexo-util": "^0.6.0",
-    "hexo-deployer-git": "0.3.0"
+	"hexo-generator-sitemap": "1.1.2"
   }
 }
