--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "hexo": "^3.2.0",
+    "hexo-abbrlink": "^2.0.5",
     "hexo-deployer-git": "0.3.0",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-baidu-sitemap": "^0.1.2",
@@ -14,7 +15,7 @@
     "hexo-generator-cname": "0.3.0",
     "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.0",
-    "hexo-generator-sitemap": "1.1.2",
+    "hexo-generator-sitemap": "^1.1.2",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.2.0",
     "hexo-renderer-marked": "^0.2.10",
