--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: Hwchiu Learning Note
-subtitle:
+subtitle: kubernetes, k8s, sdn
 description:
 author: Hwchiu
 language: en
@@ -12,7 +12,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://hwchiu.com
+url: https://blog.hwchiu.com
 root: /
 permalink: :title.html
 #permalink: archives/:abbrlink.html
