--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Hwchiu Learning Note
 subtitle: kubernetes, sdn, linux
-description: aarticle about kubernetes, SDN and Linux
+description: A blog about about kubernetes, SDN(Software Defined Networking) and any Linux problems.
 author: Hwchiu
 language: en
 timezone:
