--- a/themes/next-master/_config.yml
+++ b/themes/next-master/_config.yml
@@ -351,7 +351,7 @@ mobile_layout_economy: false
 android_chrome_color: "#222"
 
 # Custom Logo (Do not support scheme Mist)
-custom_logo: #/uploads/custom-logo.jpg
+custom_logo: /uploads/hwchiu.jpg
 
 codeblock:
   # Code Highlight theme
