--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hexo-generator-sitemap": "^1.1.2",
     "hexo-generator-tag": "^0.2.0",
     "hexo-generator-topindex": "^0.3.0",
+    "hexo-next-utteranc": "github:theme-next/hexo-next-utteranc",
     "hexo-related-popular-posts": "^3.0.1",
     "hexo-renderer-ejs": "^0.2.0",
     "hexo-renderer-marked": "^0.2.10",
